--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 23
+    buildToolsVersion '26.0.0'
     defaultConfig {
         applicationId "echo.rootstockapp"
         minSdkVersion 23
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 23
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -25,10 +25,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.squareup.okhttp3:okhttp:3.8.1' 
-    compile 'com.android.support:appcompat-v7:25.3.1' 
-    compile 'com.android.support:support-v4:25.3.1' 
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:support-v4:23.0.0'
     compile 'com.loopj.android:android-async-http:1.4.9' 
     compile 'cz.msebera.android:httpclient:4.4.1.2' 
-    compile 'com.android.support:design:25.3.1' 
+
     testCompile 'junit:junit:4.12'
 }
