--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true">
         <activity
             android:name=".AppLoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:noHistory="true"
+            android:theme="@style/RootstockTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -20,7 +21,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/RootstockTheme">
 
         </activity>
     
