--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,3 +1,3 @@
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.project.dir=
+#Mon Jan 22 11:16:57 NZDT 2018
 eclipse.preferences.version=1
+connection.project.dir=
