--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion '26.0.1'
     defaultConfig {
-        applicationId "echo.rootstockapp"
+        applicationId "pfr.clonal"
         minSdkVersion 23
         targetSdkVersion 23
         versionCode 2
